CSS tweaks for historical message and alignment fix for all messages.

--- a/app/NovaWeb/src/styles/partials/_pagecontent.scss
+++ b/app/NovaWeb/src/styles/partials/_pagecontent.scss
@@ -82,21 +82,22 @@ pagecontent, bp-properties-panel {
     }
 
     .artifact-status {
-            color: $white;
-            margin: 0 0 10px;
-            padding: 10px 10px 10px 0;
-            position: relative;
-            width: 100%;
-            display: flex;
+        color: $white;
+        margin: 0 0 10px;
+        padding: 10px 10px 10px 0;
+        position: relative;
+        width: 100%;
+        display: flex;
+        align-items: center;
 
         .icon {
             display: inline-block;
-            text-align: center;
             margin: -10px 10px;
             font-size: 2.5rem;
 
             &::before {
                 font-size: 2.5rem;
+                line-height: inherit;
             }
         }
     }
